#pragma once
class Movimiento
{
    private:
        /* data* /
     public:
        Movimiento(/* args */) {}
        ~Movimiento() {}
};