#pragma once
class Posicion
{
    private:
        /* data* /
     public:
        Posicion(/* args */) {}
        ~Posicion() {}
};