#pragma once
class Tamaño
{
    private:
        /* data* /
     public:
        Tamaño(/* args */) {}
        ~Tamaño() {}
};